Fixed bugs in URF date/time processing. Added preliminary Guise date/time controls.